--- a/world/flickcurl/.artixlinux/pkgbase.yaml
+++ b/world/flickcurl/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: flickcurl
-  version: 1.26-12
+  version: 1.26-13
   arch:
     - x86_64
   pkgname:
     - flickcurl
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.26-12
+    version: 1.26-13
     packages:
-      - flickcurl-1.26-12-x86_64.pkg.tar.zst
+      - flickcurl-1.26-13-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
