--- a/world/fontforge/.artixlinux/pkgbase.yaml
+++ b/world/fontforge/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: fontforge
-  version: 20230101-6
+  version: 20230101-6.1
   arch:
     - x86_64
   pkgname:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 20230101-6
+    version: 20230101-6.1
     packages:
-      - fontforge-20230101-6-x86_64.pkg.tar.zst
+      - fontforge-20230101-6.1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
