--- a/world/glade/.artixlinux/pkgbase.yaml
+++ b/world/glade/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: glade
-  version: 3.40.0+r31+g1b15f940-1
+  version: 3.40.0+r31+g1b15f940-2
   arch:
     - x86_64
   pkgname:
     - glade
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.40.0+r31+g1b15f940-1
+    version: 3.40.0+r31+g1b15f940-2
     packages:
-      - glade-3.40.0+r31+g1b15f940-1-x86_64.pkg.tar.zst
+      - glade-3.40.0+r31+g1b15f940-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
