--- a/world/gnome-boxes/.artixlinux/pkgbase.yaml
+++ b/world/gnome-boxes/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gnome-boxes
-  version: 48.0-3
+  version: 48.0-4
   arch:
     - x86_64
   pkgname:
     - gnome-boxes
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.0-3
+    version: 48.0-4
     packages:
-      - gnome-boxes-48.0-3-x86_64.pkg.tar.zst
+      - gnome-boxes-48.0-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
