--- a/world/gnome-connections/.artixlinux/pkgbase.yaml
+++ b/world/gnome-connections/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gnome-connections
-  version: 48.0-3
+  version: 48.0-6
   arch:
     - x86_64
   pkgname:
     - gnome-connections
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.0-3
+    version: 48.0-6
     packages:
-      - gnome-connections-48.0-3-x86_64.pkg.tar.zst
+      - gnome-connections-48.0-6-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
