--- a/world/gnome-control-center/.artixlinux/pkgbase.yaml
+++ b/world/gnome-control-center/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: gnome-control-center
-  version: 48.1-1
+  version: 48.1-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - gnome-keybindings
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 48.1-1
+    version: 48.1-2
     packages:
-      - gnome-control-center-48.1-1-x86_64.pkg.tar.zst
-      - gnome-keybindings-48.1-1-x86_64.pkg.tar.zst
+      - gnome-control-center-48.1-2-x86_64.pkg.tar.zst
+      - gnome-keybindings-48.1-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
