--- a/world/gnome-games/.artixlinux/pkgbase.yaml
+++ b/world/gnome-games/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gnome-games
-  version: 40.0-7
+  version: 40.0-8
   arch:
     - x86_64
   pkgname:
     - gnome-games
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 40.0-7
+    version: 40.0-8
     packages:
-      - gnome-games-40.0-7-x86_64.pkg.tar.zst
+      - gnome-games-40.0-8-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
