--- a/world/gnome-robots/.artixlinux/pkgbase.yaml
+++ b/world/gnome-robots/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gnome-robots
-  version: 41.2-1
+  version: 41.2-2
   arch:
     - x86_64
   pkgname:
     - gnome-robots
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 41.2-1
+    version: 41.2-2
     packages:
-      - gnome-robots-41.2-1-x86_64.pkg.tar.zst
+      - gnome-robots-41.2-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
