--- a/world/gtksourceview4/.artixlinux/pkgbase.yaml
+++ b/world/gtksourceview4/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gtksourceview4
-  version: 4.8.4-1
+  version: 4.8.4-2
   arch:
     - x86_64
   pkgname:
     - gtksourceview4
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.8.4-1
+    version: 4.8.4-2
     packages:
-      - gtksourceview4-4.8.4-1-x86_64.pkg.tar.zst
+      - gtksourceview4-4.8.4-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
