--- a/world/gupnp-av/.artixlinux/pkgbase.yaml
+++ b/world/gupnp-av/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: gupnp-av
-  version: 0.14.3-1
+  version: 0.14.3-2
   arch:
     - x86_64
   pkgname:
     - gupnp-av
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.14.3-1
+    version: 0.14.3-2
     packages:
-      - gupnp-av-0.14.3-1-x86_64.pkg.tar.zst
+      - gupnp-av-0.14.3-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
