--- a/world/handbrake/.artixlinux/pkgbase.yaml
+++ b/world/handbrake/.artixlinux/pkgbase.yaml
@@ -26,18 +26,16 @@ repos:
     version: null
     packages: []
   world-goblins:
-    version: 1.9.2-3
-    packages:
-      - handbrake-1.9.2-3-x86_64.pkg.tar.zst
-      - handbrake-cli-1.9.2-3-x86_64.pkg.tar.zst
+    version: null
+    packages: []
   world-gremlins:
     version: null
     packages: []
   world:
-    version: 1.9.2-2
+    version: 1.9.2-3
     packages:
-      - handbrake-1.9.2-2-x86_64.pkg.tar.zst
-      - handbrake-cli-1.9.2-2-x86_64.pkg.tar.zst
+      - handbrake-1.9.2-3-x86_64.pkg.tar.zst
+      - handbrake-cli-1.9.2-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
