--- a/world/libetonyek/.artixlinux/pkgbase.yaml
+++ b/world/libetonyek/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libetonyek
-  version: 0.1.12-2
+  version: 0.1.12-3
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - libetonyek-doc
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.12-2
+    version: 0.1.12-3
     packages:
-      - libetonyek-0.1.12-2-x86_64.pkg.tar.zst
-      - libetonyek-doc-0.1.12-2-x86_64.pkg.tar.zst
+      - libetonyek-0.1.12-3-x86_64.pkg.tar.zst
+      - libetonyek-doc-0.1.12-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
