--- a/world/libgphoto2/.artixlinux/pkgbase.yaml
+++ b/world/libgphoto2/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libgphoto2
-  version: 2.5.31-3
+  version: 2.5.31-4
   arch:
     - x86_64
   pkgname:
     - libgphoto2
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.5.31-3
+    version: 2.5.31-4
     packages:
-      - libgphoto2-2.5.31-3-x86_64.pkg.tar.zst
+      - libgphoto2-2.5.31-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
