--- a/world/libgrss/.artixlinux/pkgbase.yaml
+++ b/world/libgrss/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libgrss
-  version: 0.7.0+16+g971c421-3
+  version: 0.7.0+16+g971c421-4
   arch:
     - x86_64
   pkgname:
     - libgrss
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.7.0+16+g971c421-3
+    version: 0.7.0+16+g971c421-4
     packages:
-      - libgrss-0.7.0+16+g971c421-3-x86_64.pkg.tar.zst
+      - libgrss-0.7.0+16+g971c421-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -52,3 +52,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
