--- a/world/libgweather-4/.artixlinux/pkgbase.yaml
+++ b/world/libgweather-4/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libgweather-4
-  version: 4.4.4-1
+  version: 4.4.4-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - libgweather-4-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.4.4-1
+    version: 4.4.4-2
     packages:
-      - libgweather-4-4.4.4-1-x86_64.pkg.tar.zst
-      - libgweather-4-docs-4.4.4-1-x86_64.pkg.tar.zst
+      - libgweather-4-4.4.4-2-x86_64.pkg.tar.zst
+      - libgweather-4-docs-4.4.4-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
