--- a/world/libmusicbrainz5/PKGBUILD
+++ b/world/libmusicbrainz5/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=libmusicbrainz5
 pkgver=5.1.0
-pkgrel=7
+pkgrel=9
 pkgdesc="Library That Provides Access to the MusicBrainz Server"
 url='https://musicbrainz.org/doc/libmusicbrainz'
 arch=(x86_64)
@@ -34,7 +34,8 @@ prepare() {
 build() {
   cmake -S libmusicbrainz-$pkgver -B build -G Ninja \
     -DCMAKE_INSTALL_PREFIX=/usr \
-    -DCMAKE_BUILD_TYPE=None
+    -DCMAKE_BUILD_TYPE=None \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.5
   cmake --build build
   cmake --build build --target docs
 }
