--- a/world/libmusicbrainz5/.artixlinux/pkgbase.yaml
+++ b/world/libmusicbrainz5/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libmusicbrainz5
-  version: 5.1.0-7
+  version: 5.1.0-9
   arch:
     - x86_64
   pkgname:
     - libmusicbrainz5
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.1.0-7
+    version: 5.1.0-9
     packages:
-      - libmusicbrainz5-5.1.0-7-x86_64.pkg.tar.zst
+      - libmusicbrainz5-5.1.0-9-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
