--- a/world/libodfgen/.artixlinux/pkgbase.yaml
+++ b/world/libodfgen/.artixlinux/pkgbase.yaml
@@ -1,14 +1,14 @@
 ---
 pkgbase:
   name: libodfgen
-  version: 0.1.8-3
+  version: 0.1.8-4
   arch:
     - x86_64
   pkgname:
     - libodfgen
 actions:
   addRepo: world
-  removeRepo: galaxy
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.1.8-3
+    version: 0.1.8-4
     packages:
-      - libodfgen-0.1.8-3-x86_64.pkg.tar.zst
+      - libodfgen-0.1.8-4-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
