--- a/world/librest/.artixlinux/pkgbase.yaml
+++ b/world/librest/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: librest
-  version: 0.9.1-2.1
+  version: 0.9.1-3
   arch:
     - x86_64
   pkgname:
@@ -10,11 +10,11 @@ pkgbase:
     - librest-demos
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -33,11 +33,11 @@ repos:
     version: null
     packages: []
   world:
-    version: 0.9.1-2.1
+    version: 0.9.1-3
     packages:
-      - librest-0.9.1-2.1-x86_64.pkg.tar.zst
-      - librest-docs-0.9.1-2.1-x86_64.pkg.tar.zst
-      - librest-demos-0.9.1-2.1-x86_64.pkg.tar.zst
+      - librest-0.9.1-3-x86_64.pkg.tar.zst
+      - librest-docs-0.9.1-3-x86_64.pkg.tar.zst
+      - librest-demos-0.9.1-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -56,3 +56,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
