--- a/world/librest/PKGBUILD
+++ b/world/librest/PKGBUILD
@@ -3,14 +3,14 @@
 pkgbase=librest
 pkgname=(librest librest-docs librest-demos)
 pkgver=0.9.1
-pkgrel=2.1
+pkgrel=3
 pkgdesc="Library for accessing RESTful web services"
 url="https://gitlab.gnome.org/GNOME/librest"
 arch=(x86_64)
 license=(LGPL)
 depends=(glib2 libxml2 libsoup3 json-glib)
 makedepends=(gobject-introspection git meson gi-docgen vala libadwaita
-             gtksourceview5)
+             gtksourceview5 glib2-devel)
 _commit=aa9e968e381ede159414c6338da24d61ad0b5d8b  # tags/0.9.1^0
 source=("git+https://gitlab.gnome.org/GNOME/librest.git#commit=$_commit"
         30.patch)
