--- a/world/libsoup/.artixlinux/pkgbase.yaml
+++ b/world/libsoup/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: libsoup
-  version: 2.74.3-1
+  version: 2.74.3-3
   arch:
     - x86_64
   pkgname:
     - libsoup
     - libsoup-docs
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.74.3-1
+    version: 2.74.3-3
     packages:
-      - libsoup-2.74.3-1-x86_64.pkg.tar.zst
-      - libsoup-docs-2.74.3-1-x86_64.pkg.tar.zst
+      - libsoup-2.74.3-3-x86_64.pkg.tar.zst
+      - libsoup-docs-2.74.3-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -54,3 +54,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
