--- a/world/libspatialite/.artixlinux/pkgbase.yaml
+++ b/world/libspatialite/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libspatialite
-  version: 5.1.0-2
+  version: 5.1.0-3
   arch:
     - x86_64
   pkgname:
     - libspatialite
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.1.0-2
+    version: 5.1.0-3
     packages:
-      - libspatialite-5.1.0-2-x86_64.pkg.tar.zst
+      - libspatialite-5.1.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
