--- a/world/libspatialite/PKGBUILD
+++ b/world/libspatialite/PKGBUILD
@@ -1,12 +1,11 @@
-# Maintainer: Cory Sanin <corysanin@artixlinux.org>
-# Contributor: Jaroslav Lichtblau <svetlemodry@archlinux.org>
-# Contributor: Bruno Pagani <archange@archlinux.org>
+# Maintainer: Jaroslav Lichtblau <svetlemodry@archlinux.org>
+# Maintainer: Bruno Pagani <archange@archlinux.org>
 # Contributor: Brian Galey <bkgaley at gmail dot com>
 # Contributor: Pietro Zambelli <peter.zamb at gmail dot com>
 
 pkgname=libspatialite
 pkgver=5.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="SQLite extension to support spatial data types and operations"
 arch=(x86_64)
 url="https://www.gaia-gis.it/fossil/libspatialite"
@@ -17,7 +16,7 @@ sha256sums=('43be2dd349daffe016dd1400c5d11285828c22fea35ca5109f21f3ed50605080')
 
 build() {
   cd $pkgname-$pkgver
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --enable-freexl=no
   make
 }
 
