--- a/world/libvirt-glib/.artixlinux/pkgbase.yaml
+++ b/world/libvirt-glib/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libvirt-glib
-  version: 5.0.0-2
+  version: 5.0.0-3
   arch:
     - x86_64
   pkgname:
     - libvirt-glib
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.0.0-2
+    version: 5.0.0-3
     packages:
-      - libvirt-glib-5.0.0-2-x86_64.pkg.tar.zst
+      - libvirt-glib-5.0.0-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
