--- a/world/libxmlplusplus/.artixlinux/pkgbase.yaml
+++ b/world/libxmlplusplus/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libxml++
-  version: 3.2.5-1
+  version: 3.2.5-3
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - libxml++-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.2.5-1
+    version: 3.2.5-3
     packages:
-      - libxml++-3.2.5-1-x86_64.pkg.tar.zst
-      - libxml++-docs-3.2.5-1-x86_64.pkg.tar.zst
+      - libxml++-3.2.5-3-x86_64.pkg.tar.zst
+      - libxml++-docs-3.2.5-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -54,3 +54,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
