--- a/world/libxmlplusplus2.6/.artixlinux/pkgbase.yaml
+++ b/world/libxmlplusplus2.6/.artixlinux/pkgbase.yaml
@@ -1,19 +1,19 @@
 ---
 pkgbase:
   name: libxml++2.6
-  version: 2.42.1-1
+  version: 2.42.3-2
   arch:
     - x86_64
   pkgname:
     - libxml++2.6
     - libxml++2.6-docs
 actions:
-  addRepo: null
-  removeRepo: null
+  addRepo: world
+  removeRepo: world-gremlins
   triggersBuild: false
   triggersRebuild: false
-  triggersRepoAdd: false
-  triggersRepoRemove: false
+  triggersRepoAdd: true
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.42.1-1
+    version: 2.42.3-2
     packages:
-      - libxml++2.6-2.42.1-1-x86_64.pkg.tar.zst
-      - libxml++2.6-docs-2.42.1-1-x86_64.pkg.tar.zst
+      - libxml++2.6-2.42.3-2-x86_64.pkg.tar.zst
+      - libxml++2.6-docs-2.42.3-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
@@ -54,3 +54,4 @@ repos:
   galaxy:
     version: null
     packages: []
+team: world
