--- a/world/libxslt/.artixlinux/pkgbase.yaml
+++ b/world/libxslt/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libxslt
-  version: 1.1.43-1
+  version: 1.1.43-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - libxslt-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,10 +32,10 @@ repos:
     version: null
     packages: []
   world:
-    version: 1.1.43-1
+    version: 1.1.43-2
     packages:
-      - libxslt-1.1.43-1-x86_64.pkg.tar.zst
-      - libxslt-docs-1.1.43-1-x86_64.pkg.tar.zst
+      - libxslt-1.1.43-2-x86_64.pkg.tar.zst
+      - libxslt-docs-1.1.43-2-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
