--- a/world/nvidia-utils/.artixlinux/pkgbase.yaml
+++ b/world/nvidia-utils/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: nvidia-utils
-  version: 570.144-1
+  version: 570.144-3
   arch:
     - x86_64
   pkgname:
@@ -11,11 +11,11 @@ pkgbase:
     - nvidia-open-dkms
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -34,12 +34,12 @@ repos:
     version: null
     packages: []
   world:
-    version: 570.144-1
+    version: 570.144-3
     packages:
-      - nvidia-utils-570.144-1-x86_64.pkg.tar.zst
-      - opencl-nvidia-570.144-1-x86_64.pkg.tar.zst
-      - nvidia-dkms-570.144-1-x86_64.pkg.tar.zst
-      - nvidia-open-dkms-570.144-1-x86_64.pkg.tar.zst
+      - nvidia-utils-570.144-3-x86_64.pkg.tar.zst
+      - opencl-nvidia-570.144-3-x86_64.pkg.tar.zst
+      - nvidia-dkms-570.144-3-x86_64.pkg.tar.zst
+      - nvidia-open-dkms-570.144-3-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
