--- a/galaxy/caja/.artixlinux/pkgbase.yaml
+++ b/galaxy/caja/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: caja
-  version: 1.28.0-2
+  version: 1.28.0-3.1
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.0-2
+    version: 1.28.0-3
     packages:
-      - caja-1.28.0-2-x86_64.pkg.tar.zst
+      - caja-1.28.0-3-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.0-3.1
+    packages:
+      - caja-1.28.0-3.1-x86_64.pkg.tar.zst
 team: galaxy
