--- a/galaxy/eom/.artixlinux/pkgbase.yaml
+++ b/galaxy/eom/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: eom
-  version: 1.28.0-2
+  version: 1.28.0-3.1
   arch:
     - x86_64
   pkgname:
     - eom
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 1.28.0-2
+    version: 1.28.0-3
     packages:
-      - eom-1.28.0-2-x86_64.pkg.tar.zst
+      - eom-1.28.0-3-x86_64.pkg.tar.zst
+  galaxy:
+    version: 1.28.0-3.1
+    packages:
+      - eom-1.28.0-3.1-x86_64.pkg.tar.zst
 team: galaxy
