--- a/galaxy/libreoffice-fresh/.artixlinux/pkgbase.yaml
+++ b/galaxy/libreoffice-fresh/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: libreoffice-fresh
-  version: 25.2.2-2
+  version: 25.2.3-2
   arch:
     - x86_64
   pkgname:
@@ -9,11 +9,11 @@ pkgbase:
     - libreoffice-fresh
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -47,11 +47,13 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 25.2.2-2
+    version: 25.2.3-1
     packages:
-      - libreoffice-fresh-sdk-25.2.2-2-x86_64.pkg.tar.zst
-      - libreoffice-fresh-25.2.2-2-x86_64.pkg.tar.zst
+      - libreoffice-fresh-sdk-25.2.3-1-x86_64.pkg.tar.zst
+      - libreoffice-fresh-25.2.3-1-x86_64.pkg.tar.zst
+  galaxy:
+    version: 25.2.3-2
+    packages:
+      - libreoffice-fresh-sdk-25.2.3-2-x86_64.pkg.tar.zst
+      - libreoffice-fresh-25.2.3-2-x86_64.pkg.tar.zst
 team: galaxy
