--- a/galaxy/lxappearance-obconf/.artixlinux/pkgbase.yaml
+++ b/galaxy/lxappearance-obconf/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: lxappearance-obconf
-  version: 0.2.4-1
+  version: 0.2.4-2.1
   arch:
     - x86_64
   pkgname:
@@ -46,10 +46,11 @@ repos:
     version: null
     packages: []
   galaxy-gremlins:
-    version: null
-    packages: []
-  galaxy:
-    version: 0.2.4-1
+    version: 0.2.4-2
     packages:
-      - lxappearance-obconf-0.2.4-1-x86_64.pkg.tar.zst
+      - lxappearance-obconf-0.2.4-2-x86_64.pkg.tar.zst
+  galaxy:
+    version: 0.2.4-2.1
+    packages:
+      - lxappearance-obconf-0.2.4-2.1-x86_64.pkg.tar.zst
 team: galaxy
